# frederik-monte-carlo

./: .gitignore  Makefile  main.py  pyproject.toml
src/: main.c
