[tool.poetry]
name = "frederikmontecarlo"
version = "0.1.0"
description = ""
authors = ["Mads Hansen Baattrup <mb@nordicenergyhouse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
